--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,16 @@ name: Build module against Playerbot Core
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'src/**'
+      - 'CMakeLists.txt'
+      - '.github/workflows/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'src/**'
+      - 'CMakeLists.txt'
+      - '.github/workflows/**'
 
 env:
   BUILD_TYPE: Release
@@ -20,6 +28,7 @@ jobs:
         path: module-src
         fetch-depth: 1
 
+
     - name: Checkout AzerothCore (Playerbot branch)
       uses: actions/checkout@v4
       with:
@@ -28,10 +37,19 @@ jobs:
         path: azerothcore-wotlk
         fetch-depth: 1
 
+
+    - name: Debug git state
+      working-directory: azerothcore-wotlk
+      run: |
+        git rev-parse --abbrev-ref HEAD
+        git log --oneline -n 5
+
+
     - name: Copy module into azerothcore-wotlk/modules
       run: |
         mkdir -p azerothcore-wotlk/modules
         cp -r module-src azerothcore-wotlk/modules/mod-guild-village
+
 
     - name: Install build deps
       run: |
@@ -40,6 +58,7 @@ jobs:
           build-essential \
           cmake \
           clang \
+          ccache \
           libmysqlclient-dev \
           libssl-dev \
           libreadline-dev \
@@ -48,6 +67,14 @@ jobs:
           libncurses-dev \
           libboost-all-dev \
           git
+
+    - name: Restore ccache cache
+      uses: actions/cache@v4
+      with:
+        path: ~/.ccache
+        key: ccache-${{ runner.os }}-${{ hashFiles('module-src/**/*.cpp', 'module-src/**/*.h', 'module-src/CMakeLists.txt') }}
+        restore-keys: |
+          ccache-${{ runner.os }}-
 
     - name: Configure CMake
       working-directory: azerothcore-wotlk
@@ -60,19 +87,20 @@ jobs:
           -DTOOLS=ON \
           -DSCRIPTS=static \
           -DWITH_PLAYERBOTS=1 \
-          -DWITH_WARNINGS=1
+          -DWITH_WARNINGS=1 \
+          -DCMAKE_C_COMPILER_LAUNCHER=ccache \
+          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
 
-    - name: Build (full)
+    - name: Build worldserver
       working-directory: azerothcore-wotlk/build
       run: |
-        make -j"$(nproc)"
+        make -j"$(nproc)" worldserver
 
     - name: Install to env/dist
       working-directory: azerothcore-wotlk/build
       run: |
         make install
-
-    - name: Show worldserver version (if built)
-      working-directory: azerothcore-wotlk/build/env/dist/bin
+        
+    - name: Save ccache stats
       run: |
-        ./worldserver --version || true
+        ccache -s || true
