--- a/conf/mod_guild_village.conf.dist
+++ b/conf/mod_guild_village.conf.dist
@@ -9,7 +9,9 @@
 GuildVillage.Locale = cs
 
 # Max počet současně existujících vesnic (min-max 1-30)
-#
+# -1 = Neomezeně / Unlimited
+# 0 = Vypnuto, jen GM příkaz / Disabled only GM command
+# 1+ = Limitované množství / Limited amount
 # Maximum number of villages that can exist at the same time (min-max 1-30)
 GuildVillage.MaxVillages = 30
 
