--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ set(scripts_STAT_SRCS
   src/guild_village_production.cpp
   src/guild_village_names.cpp
   src/guild_village_pvp.cpp
+  src/guild_village_expeditions.cpp
+  src/guild_village_expeditions_missions.cpp
   src/boss/boss_voltrix_the_unbound.cpp
   src/boss/boss_thranok_the_unyielding.cpp
   src/boss/boss_thalgron_the_earthshaker.cpp
